// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Deck Should match snapshot 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Ace of Spades",
    "suite": "spades",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 2,
    "name": "Two of Spades",
    "suite": "spades",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 3,
    "name": "Three of Spades",
    "suite": "spades",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 4,
    "name": "Four of Spades",
    "suite": "spades",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 5,
    "name": "Five of Spades",
    "suite": "spades",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 6,
    "name": "Six of Spades",
    "suite": "spades",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 7,
    "name": "Seven of Spades",
    "suite": "spades",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 8,
    "name": "Eight of Spades",
    "suite": "spades",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 9,
    "name": "Nine of Spades",
    "suite": "spades",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 10,
    "name": "10 of Spades",
    "suite": "spades",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 11,
    "name": "Jack of Spades",
    "suite": "spades",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 12,
    "name": "Queen of Spades",
    "suite": "spades",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 13,
    "name": "King of Spades",
    "suite": "spades",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 14,
    "name": "Ace of Clubs",
    "suite": "clubs",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 15,
    "name": "Two of Clubs",
    "suite": "clubs",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 16,
    "name": "Three of Clubs",
    "suite": "clubs",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 17,
    "name": "Four of Clubs",
    "suite": "clubs",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 18,
    "name": "Five of Clubs",
    "suite": "clubs",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 19,
    "name": "Six of Clubs",
    "suite": "clubs",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 20,
    "name": "Seven of Clubs",
    "suite": "clubs",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 21,
    "name": "Eight of Clubs",
    "suite": "clubs",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 22,
    "name": "Nine of Clubs",
    "suite": "clubs",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 23,
    "name": "10 of Clubs",
    "suite": "clubs",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 24,
    "name": "Jack of Clubs",
    "suite": "clubs",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 25,
    "name": "Queen of Clubs",
    "suite": "clubs",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 26,
    "name": "King of Clubs",
    "suite": "clubs",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 27,
    "name": "Ace of Diamonds",
    "suite": "diamonds",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 28,
    "name": "Two of Diamonds",
    "suite": "diamonds",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 29,
    "name": "Three of Diamonds",
    "suite": "diamonds",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 30,
    "name": "Four of Diamonds",
    "suite": "diamonds",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 31,
    "name": "Five of Diamonds",
    "suite": "diamonds",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 32,
    "name": "Six of Diamonds",
    "suite": "diamonds",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 33,
    "name": "Seven of Diamonds",
    "suite": "spades",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 34,
    "name": "Eight of Diamonds",
    "suite": "diamonds",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 35,
    "name": "Nine of Diamonds",
    "suite": "diamonds",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 36,
    "name": "10 of Diamonds",
    "suite": "diamonds",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 37,
    "name": "Jack of Diamonds",
    "suite": "diamonds",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 38,
    "name": "Queen of Diamonds",
    "suite": "diamonds",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 39,
    "name": "King of Diamonds",
    "suite": "diamonds",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 40,
    "name": "Ace of Hearts",
    "suite": "hearts",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 41,
    "name": "Two of Hearts",
    "suite": "hearts",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 42,
    "name": "Three of Hearts",
    "suite": "hearts",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 43,
    "name": "Four of Hearts",
    "suite": "hearts",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 44,
    "name": "Five of Hearts",
    "suite": "hearts",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 45,
    "name": "Six of Hearts",
    "suite": "hearts",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 46,
    "name": "Seven of Hearts",
    "suite": "hearts",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 47,
    "name": "Eight of Hearts",
    "suite": "hearts",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 48,
    "name": "Nine of Hearts",
    "suite": "hearts",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 49,
    "name": "10 of Hearts",
    "suite": "hearts",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 50,
    "name": "Jack of Hearts",
    "suite": "hearts",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 51,
    "name": "Queen of Hearts",
    "suite": "hearts",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 52,
    "name": "King of Hearts",
    "suite": "hearts",
    "symbol": "king",
    "value": "13",
  },
]
`;

exports[`Cards Deck with Jokers Should match snapshot 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Ace of Spades",
    "suite": "spades",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 2,
    "name": "Two of Spades",
    "suite": "spades",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 3,
    "name": "Three of Spades",
    "suite": "spades",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 4,
    "name": "Four of Spades",
    "suite": "spades",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 5,
    "name": "Five of Spades",
    "suite": "spades",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 6,
    "name": "Six of Spades",
    "suite": "spades",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 7,
    "name": "Seven of Spades",
    "suite": "spades",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 8,
    "name": "Eight of Spades",
    "suite": "spades",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 9,
    "name": "Nine of Spades",
    "suite": "spades",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 10,
    "name": "10 of Spades",
    "suite": "spades",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 11,
    "name": "Jack of Spades",
    "suite": "spades",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 12,
    "name": "Queen of Spades",
    "suite": "spades",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 13,
    "name": "King of Spades",
    "suite": "spades",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 14,
    "name": "Ace of Clubs",
    "suite": "clubs",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 15,
    "name": "Two of Clubs",
    "suite": "clubs",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 16,
    "name": "Three of Clubs",
    "suite": "clubs",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 17,
    "name": "Four of Clubs",
    "suite": "clubs",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 18,
    "name": "Five of Clubs",
    "suite": "clubs",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 19,
    "name": "Six of Clubs",
    "suite": "clubs",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 20,
    "name": "Seven of Clubs",
    "suite": "clubs",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 21,
    "name": "Eight of Clubs",
    "suite": "clubs",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 22,
    "name": "Nine of Clubs",
    "suite": "clubs",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 23,
    "name": "10 of Clubs",
    "suite": "clubs",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 24,
    "name": "Jack of Clubs",
    "suite": "clubs",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 25,
    "name": "Queen of Clubs",
    "suite": "clubs",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 26,
    "name": "King of Clubs",
    "suite": "clubs",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 27,
    "name": "Ace of Diamonds",
    "suite": "diamonds",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 28,
    "name": "Two of Diamonds",
    "suite": "diamonds",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 29,
    "name": "Three of Diamonds",
    "suite": "diamonds",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 30,
    "name": "Four of Diamonds",
    "suite": "diamonds",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 31,
    "name": "Five of Diamonds",
    "suite": "diamonds",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 32,
    "name": "Six of Diamonds",
    "suite": "diamonds",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 33,
    "name": "Seven of Diamonds",
    "suite": "spades",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 34,
    "name": "Eight of Diamonds",
    "suite": "diamonds",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 35,
    "name": "Nine of Diamonds",
    "suite": "diamonds",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 36,
    "name": "10 of Diamonds",
    "suite": "diamonds",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 37,
    "name": "Jack of Diamonds",
    "suite": "diamonds",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 38,
    "name": "Queen of Diamonds",
    "suite": "diamonds",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 39,
    "name": "King of Diamonds",
    "suite": "diamonds",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 40,
    "name": "Ace of Hearts",
    "suite": "hearts",
    "symbol": "ace",
    "value": "1",
  },
  Object {
    "id": 41,
    "name": "Two of Hearts",
    "suite": "hearts",
    "symbol": "two",
    "value": "2",
  },
  Object {
    "id": 42,
    "name": "Three of Hearts",
    "suite": "hearts",
    "symbol": "three",
    "value": "3",
  },
  Object {
    "id": 43,
    "name": "Four of Hearts",
    "suite": "hearts",
    "symbol": "four",
    "value": "4",
  },
  Object {
    "id": 44,
    "name": "Five of Hearts",
    "suite": "hearts",
    "symbol": "five",
    "value": "5",
  },
  Object {
    "id": 45,
    "name": "Six of Hearts",
    "suite": "hearts",
    "symbol": "six",
    "value": "6",
  },
  Object {
    "id": 46,
    "name": "Seven of Hearts",
    "suite": "hearts",
    "symbol": "seven",
    "value": "7",
  },
  Object {
    "id": 47,
    "name": "Eight of Hearts",
    "suite": "hearts",
    "symbol": "eight",
    "value": "8",
  },
  Object {
    "id": 48,
    "name": "Nine of Hearts",
    "suite": "hearts",
    "symbol": "nine",
    "value": "9",
  },
  Object {
    "id": 49,
    "name": "10 of Hearts",
    "suite": "hearts",
    "symbol": "ten",
    "value": "10",
  },
  Object {
    "id": 50,
    "name": "Jack of Hearts",
    "suite": "hearts",
    "symbol": "jack",
    "value": "11",
  },
  Object {
    "id": 51,
    "name": "Queen of Hearts",
    "suite": "hearts",
    "symbol": "queen",
    "value": "12",
  },
  Object {
    "id": 52,
    "name": "King of Hearts",
    "suite": "hearts",
    "symbol": "king",
    "value": "13",
  },
  Object {
    "id": 53,
    "name": "Joker",
    "suite": "none",
    "symbol": "joker",
    "value": 0,
  },
  Object {
    "id": 54,
    "name": "Joker",
    "suite": "none",
    "symbol": "joker",
    "value": 0,
  },
]
`;

exports[`Cards Joker Should match snapshot 1`] = `
Object {
  "name": "Joker",
  "suite": "none",
  "symbol": "joker",
  "value": 0,
}
`;
